--- a/user-service.yml
+++ b/user-service.yml
@@ -1,8 +1,15 @@
 spring:
   application:
     name: user-service
+  datasource:
+    url: jdbc:postgresql://localhost:5432/userdb
+    username: postgres
+    password: your_password
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 server:
   port: 8081
-
-message: Hello from User Service (loaded from Config Server!)
