--- a/order-service.yml
+++ b/order-service.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: product-service
+    name: order-service
   datasource:
     url: jdbc:postgresql://localhost:5432/orderdb
     username: postgres
