--- a/product-service.yml
+++ b/product-service.yml
@@ -17,3 +17,8 @@ server:
 jwt:
   config:
     secret: 469f3debf3d3e525ccf4d16b3a7634bc7b2f5cc1
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka:eurekasecret@localhost:8761/eureka
