--- a/user-service.yml
+++ b/user-service.yml
@@ -19,7 +19,18 @@ jwt:
     secret: 469f3debf3d3e525ccf4d16b3a7634bc7b2f5cc1
     expire: 86400000
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: info,health
+  endpoint:
+    health:
+      show-details: always
+
 eureka:
   client:
     service-url:
       defaultZone: http://eureka:eurekasecret@localhost:8761/eureka
+    register-with-eureka: true
+    fetch-registry: true
