--- a/product-service.yml
+++ b/product-service.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: product-service
+    description: Product Service
+    version: 1.0.0
   datasource:
     url: jdbc:postgresql://localhost:5432/productdb
     username: postgres
@@ -27,6 +29,11 @@ management:
     health:
       show-details: always
 
+info:
+  app:
+    name: ${spring.application.name}
+    description: ${spring.application.description}
+    version: ${spring.application.version}
 
 eureka:
   client:
