update order-service.yml v3

--- a/order-service.yml
+++ b/order-service.yml
@@ -31,7 +31,7 @@ management:
 
 info:
   app:
-    name: ${spring.application.name}
+    name: test
     description: ${spring.application.description}
     version: ${spring.application.version}
 
