--- a/order-service.yml
+++ b/order-service.yml
@@ -39,5 +39,5 @@ info:
 
 eureka:
   client:
-    service-url:
+    serviceUrl:
       defaultZone: http://eureka:eurekasecret@localhost:8761/eureka
