--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8762
+  port: 8761
 
 spring:
   application:
@@ -15,3 +15,5 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+    serviceUrl:
+      defaultZone: http://eureka:eurekasecret@localhost:8761/eureka/
