--- a/order-service.yml
+++ b/order-service.yml
@@ -40,4 +40,4 @@ info:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://eureka:eurekasecret@localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
