--- a/product-service.yml
+++ b/product-service.yml
@@ -37,5 +37,5 @@ info:
 
 eureka:
   client:
-    service-url:
-      defaultZone: http://eureka:eurekasecret@localhost:8761/eureka
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
