--- a/user-service.yml
+++ b/user-service.yml
@@ -38,7 +38,5 @@ info:
 
 eureka:
   client:
-    service-url:
-      defaultZone: http://eureka:eurekasecret@localhost:8761/eureka
-    register-with-eureka: true
-    fetch-registry: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
